# GStreamer

examples/AboutGStreamer/: create_element.c  crt_ele  hello_world.c  helloworld  init  initialize_gstreamer.c  link  linking_elements.c
examples/Tutorials/: CMakeLists.txt  basic_tutorial-1.c  basic_tutorial-2.c
examples/tutorials/: basic-tutorial-1.c
